--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,404 +1,461 @@
 ---
 ---
 
-@article{10.1128_genomeA.01064-132014,
+@article{10.1128/genomeA.01064-132014,
   title={Draft Genome Sequence of Syntrophorhabdus aromaticivorans Strain UI, a Mesophilic Aromatic Compound-Degrading Syntroph},
-  author={M. K. Nobu, T. Narihiro, H. Tamaki, Y. L. Qiu, Y. Sekiguchi, T. Woyke, L. Goodwin, K. W. Davenport, Y. Kamagata and W. T. Liu},
+  author={M. K. Nobu and T. Narihiro and H. Tamaki and Y. L. Qiu and Y. Sekiguchi and T. Woyke and L. Goodwin and K. W. Davenport and Y. Kamagata and W. T. Liu},
   journal={Genome Announc},
   volume={2},
   year={2014},
-  doi={10.1128/genomeA.01064-13}}
-@article{10.1111_1462-2920.123832014,
+  doi={10.1128/genomeA.01064-13},
+  html={https://doi.org/10.1128/genomeA.01064-13}}
+@article{10.1111/1462-2920.123832014,
   title={Metagenomic characterization of 'Candidatus Defluviicoccus tetraformis strain TFO71', a tetrad-forming organism, predominant in an anaerobic-aerobic membrane bioreactor with deteriorated biological phosphorus removal},
-  author={M. K. Nobu, H. Tamaki, K. Kubota and W. T. Liu},
+  author={M. K. Nobu and H. Tamaki and K. Kubota and W. T. Liu},
   journal={Environ Microbiol},
   volume={16},
   year={2014},
-  doi={10.1111/1462-2920.12383}}
-@article{10.1371_journal.pone.01191312015,
+  doi={10.1111/1462-2920.12383},
+  html={https://doi.org/10.1111/1462-2920.12383}}
+@article{10.1371/journal.pone.01191312015,
   title={Microbial community analysis of anaerobic reactors treating soft drink wastewater},
-  author={T. Narihiro, N. K. Kim, R. Mei, M. K. Nobu and W. T. Liu},
+  author={T. Narihiro and N. K. Kim and R. Mei and M. K. Nobu and W. T. Liu},
   journal={PLoS One},
   volume={10},
   year={2015},
-  doi={10.1371/journal.pone.0119131}}
-@article{10.1111_1462-2920.126162015,
+  doi={10.1371/journal.pone.0119131},
+  html={https://doi.org/10.1371/journal.pone.0119131}}
+@article{10.1111/1462-2920.126162015,
   title={The nexus of syntrophy-associated microbiota in anaerobic digestion revealed by long-term enrichment and community survey},
-  author={T. Narihiro, M. K. Nobu, N. K. Kim, Y. Kamagata and W. T. Liu},
+  author={T. Narihiro and M. K. Nobu and N. K. Kim and Y. Kamagata and W. T. Liu},
   journal={Environ Microbiol},
   volume={17},
   year={2015},
-  doi={10.1111/1462-2920.12616}}
-@article{10.1111_1462-2920.124442015,
+  doi={10.1111/1462-2920.12616},
+  html={https://doi.org/10.1111/1462-2920.12616}}
+@article{10.1111/1462-2920.124442015,
   title={The genome of Syntrophorhabdus aromaticivorans strain UI provides new insights for syntrophic aromatic compound metabolism and electron flow},
-  author={M. K. Nobu, T. Narihiro, T. Hideyuki, Y. L. Qiu, Y. Sekiguchi, T. Woyke, L. Goodwin, K. W. Davenport, Y. Kamagata and W. T. Liu},
+  author={M. K. Nobu and T. Narihiro and T. Hideyuki and Y. L. Qiu and Y. Sekiguchi and T. Woyke and L. Goodwin and K. W. Davenport and Y. Kamagata and W. T. Liu},
   journal={Environ Microbiol},
   volume={17},
   year={2015},
-  doi={10.1111/1462-2920.12444}}
-@article{10.1038_ismej.2014.2562015,
+  doi={10.1111/1462-2920.12444},
+  html={https://doi.org/10.1111/1462-2920.12444}}
+@article{10.1038/ismej.2014.2562015,
   title={Microbial dark matter ecogenomics reveals complex synergistic networks in a methanogenic bioreactor},
-  author={M. K. Nobu, T. Narihiro, C. Rinke, Y. Kamagata, S. G. Tringe, T. Woyke and W. T. Liu},
+  author={M. K. Nobu and T. Narihiro and C. Rinke and Y. Kamagata and S. G. Tringe and T. Woyke and W. T. Liu},
   journal={ISME J},
   volume={9},
   year={2015},
-  doi={10.1038/ismej.2014.256}}
-@article{10.1371_journal.pone.01677882016,
+  doi={10.1038/ismej.2014.256},
+  html={https://doi.org/10.1038/ismej.2014.256}}
+@article{10.1371/journal.pone.01677882016,
   title={A Single-Granule-Level Approach Reveals Ecological Heterogeneity in an Upflow Anaerobic Sludge Blanket Reactor},
-  author={K. Kuroda, M. K. Nobu, R. Mei, T. Narihiro, B. T. Bocher, T. Yamaguchi and W. T. Liu},
+  author={K. Kuroda and M. K. Nobu and R. Mei and T. Narihiro and B. T. Bocher and T. Yamaguchi and W. T. Liu},
   journal={PLoS One},
   volume={11},
   year={2016},
-  doi={10.1371/journal.pone.0167788}}
-@article{10.1007_s00253-015-7095-y2016,
+  doi={10.1371/journal.pone.0167788},
+  html={https://doi.org/10.1371/journal.pone.0167788}}
+@article{10.1007/s00253-015-7095-y2016,
   title={Global metabolomic responses of Nitrosomonas europaea 19718 to cold stress and altered ammonia feeding patterns},
-  author={H. Lu, A. V. Ulanov, M. Nobu and W. T. Liu},
+  author={H. Lu and A. V. Ulanov and M. Nobu and W. T. Liu},
   journal={Appl Microbiol Biotechnol},
   volume={100},
   year={2016},
-  doi={10.1007/s00253-015-7095-y}}
-@article{10.1038_srep340902016,
+  doi={10.1007/s00253-015-7095-y},
+  html={https://doi.org/10.1007/s00253-015-7095-y}}
+@article{10.1038/srep340902016,
   title={Evaluating digestion efficiency in full-scale anaerobic digesters by identifying active microbial populations through the lens of microbial activity},
-  author={R. Mei, T. Narihiro, M. K. Nobu, K. Kuroda and W. T. Liu},
+  author={R. Mei and T. Narihiro and M. K. Nobu and K. Kuroda and W. T. Liu},
   journal={Sci Rep},
   volume={6},
   year={2016},
-  doi={10.1038/srep34090}}
-@article{10.1111_lam.126292016,
+  doi={10.1038/srep34090},
+  html={https://doi.org/10.1038/srep34090}}
+@article{10.1111/lam.126292016,
   title={Effects of heat shocks on microbial community structure and microbial activity of a methanogenic enrichment degrading benzoate},
-  author={R. Mei, T. Narihiro, M. K. Nobu and W. T. Liu},
+  author={R. Mei and T. Narihiro and M. K. Nobu and W. T. Liu},
   journal={Lett Appl Microbiol},
   volume={63},
   year={2016},
-  doi={10.1111/lam.12629}}
-@article{10.1128_genomeA.00047-162016,
+  doi={10.1111/lam.12629},
+  html={https://doi.org/10.1111/lam.12629}}
+@article{10.1128/genomeA.00047-162016,
   title={Draft Genome Sequence of Syntrophomonas wolfei subsp. methylbutyratica Strain 4J5T (JCM 14075), a Mesophilic Butyrate- and 2-Methylbutyrate-Degrading Syntroph},
-  author={T. Narihiro, M. K. Nobu, H. Tamaki, Y. Kamagata and W. T. Liu},
+  author={T. Narihiro and M. K. Nobu and H. Tamaki and Y. Kamagata and W. T. Liu},
   journal={Genome Announc},
   volume={4},
   year={2016},
-  doi={10.1128/genomeA.00047-16}}
-@article{10.1264_jsme2.ME160572016,
+  doi={10.1128/genomeA.00047-16},
+  html={https://doi.org/10.1128/genomeA.00047-16}}
+@article{10.1264/jsme2.ME160572016,
   title={Comparative Genomics of Syntrophic Branched-Chain Fatty Acid Degrading Bacteria},
-  author={T. Narihiro, M. K. Nobu, H. Tamaki, Y. Kamagata, Y. Sekiguchi and W. T. Liu},
+  author={T. Narihiro and M. K. Nobu and H. Tamaki and Y. Kamagata and Y. Sekiguchi and W. T. Liu},
   journal={Microbes Environ},
   volume={31},
   year={2016},
-  doi={10.1264/jsme2.ME16057}}
-@article{10.1038_ismej.2015.972016,
+  doi={10.1264/jsme2.ME16057},
+  html={https://doi.org/10.1264/jsme2.ME16057}}
+@article{10.1038/ismej.2015.972016,
   title={Phylogeny and physiology of candidate phylum 'Atribacteria' (OP9/JS1) inferred from cultivation-independent genomics},
-  author={M. K. Nobu, J. A. Dodsworth, S. K. Murugapiran, C. Rinke, E. A. Gies, G. Webster, P. Schwientek, P. Kille, R. J. Parkes, H. Sass, B. B. Jorgensen, A. J. Weightman, W. T. Liu, S. J. Hallam, G. Tsiamis, T. Woyke and B. P. Hedlund},
+  author={M. K. Nobu and J. A. Dodsworth and S. K. Murugapiran and C. Rinke and E. A. Gies and G. Webster and P. Schwientek and P. Kille and R. J. Parkes and H. Sass and B. B. Jorgensen and A. J. Weightman and W. T. Liu and S. J. Hallam and G. Tsiamis and T. Woyke and B. P. Hedlund},
   journal={ISME J},
   volume={10},
   year={2016},
-  doi={10.1038/ismej.2015.97}}
-@article{10.1038_ismej.2016.332016,
+  doi={10.1038/ismej.2015.97},
+  html={https://doi.org/10.1038/ismej.2015.97}}
+@article{10.1038/ismej.2016.332016,
   title={Chasing the elusive Euryarchaeota class WSA2: genomes reveal a uniquely fastidious methyl-reducing methanogen},
-  author={M. K. Nobu, T. Narihiro, K. Kuroda, R. Mei and W. T. Liu},
+  author={M. K. Nobu and T. Narihiro and K. Kuroda and R. Mei and W. T. Liu},
   journal={ISME J},
   volume={10},
   year={2016},
-  doi={10.1038/ismej.2016.33}}
-@article{10.1038_s41467-017-01376-92017,
+  doi={10.1038/ismej.2016.33},
+  html={https://doi.org/10.1038/ismej.2016.33}}
+@article{10.1038/s41467-017-01376-92017,
   title={Diverse Marinimicrobia bacteria may mediate coupled biogeochemical cycles along eco-thermodynamic gradients},
-  author={A. K. Hawley, M. K. Nobu, J. J. Wright, W. E. Durno, C. Morgan-Lang, B. Sage, P. Schwientek, B. K. Swan, C. Rinke, M. Torres-Beltran, K. Mewis, W. T. Liu, R. Stepanauskas, T. Woyke and S. J. Hallam},
+  author={A. K. Hawley and M. K. Nobu and J. J. Wright and W. E. Durno and C. Morgan-Lang and B. Sage and P. Schwientek and B. K. Swan and C. Rinke and M. Torres-Beltran and K. Mewis and W. T. Liu and R. Stepanauskas and T. Woyke and S. J. Hallam},
   journal={Nat Commun},
   volume={8},
   year={2017},
-  doi={10.1038/s41467-017-01376-9}}
-@article{10.1016_j.watres.2017.06.0082017,
+  doi={10.1038/s41467-017-01376-9},
+  html={https://doi.org/10.1038/s41467-017-01376-9}}
+@article{10.1016/j.watres.2017.06.0082017,
   title={Impacts of biostimulation and bioaugmentation on the performance and microbial ecology in methanogenic reactors treating purified terephthalic acid wastewater},
-  author={M. Liu, S. Wang, M. K. Nobu, B. T. W. Bocher, S. A. Kaley and W. T. Liu},
+  author={M. Liu and S. Wang and M. K. Nobu and B. T. W. Bocher and S. A. Kaley and W. T. Liu},
   journal={Water Res},
   volume={122},
   year={2017},
-  doi={10.1016/j.watres.2017.06.008}}
-@article{10.1016_j.watres.2017.07.0502017,
+  doi={10.1016/j.watres.2017.06.008},
+  html={https://doi.org/10.1016/j.watres.2017.06.008}}
+@article{10.1016/j.watres.2017.07.0502017,
   title={Operation-driven heterogeneity and overlooked feed-associated populations in global anaerobic digester microbiome},
-  author={R. Mei, M. K. Nobu, T. Narihiro, K. Kuroda, J. Munoz Sierra, Z. Wu, L. Ye, P. K. H. Lee, P. H. Lee, J. B. van Lier, M. J. McInerney, Y. Kamagata and W. T. Liu},
+  author={R. Mei and M. K. Nobu and T. Narihiro and K. Kuroda and J. Munoz Sierra and Z. Wu and L. Ye and P. K. H. Lee and P. H. Lee and J. B. van Lier and M. J. McInerney and Y. Kamagata and W. T. Liu},
   journal={Water Res},
   volume={124},
   year={2017},
-  doi={10.1016/j.watres.2017.07.050}}
-@article{10.1111_1462-2920.139222017,
+  doi={10.1016/j.watres.2017.07.050},
+  html={https://doi.org/10.1016/j.watres.2017.07.050}}
+@article{10.1111/1462-2920.139222017,
   title={Thermodynamically diverse syntrophic aromatic compound catabolism},
-  author={M. K. Nobu, T. Narihiro, M. Liu, K. Kuroda, R. Mei and W. T. Liu},
+  author={M. K. Nobu and T. Narihiro and M. Liu and K. Kuroda and R. Mei and W. T. Liu},
   journal={Environ Microbiol},
   volume={19},
   year={2017},
-  doi={10.1111/1462-2920.13922}}
-@article{10.1128_genomeA.00517-182018,
+  doi={10.1111/1462-2920.13922},
+  html={https://doi.org/10.1111/1462-2920.13922}}
+@article{10.1128/genomeA.00517-182018,
   title={Draft Genome Sequence of Moorella sp. Strain Hama-1, a Novel Acetogenic Bacterium Isolated from a Thermophilic Digestion Reactor},
-  author={J. Harada, T. Yamada, S. Giri, M. Hamada, M. K. Nobu, T. Narihiro, H. Tsuji and H. Daimon},
+  author={J. Harada and T. Yamada and S. Giri and M. Hamada and M. K. Nobu and T. Narihiro and H. Tsuji and H. Daimon},
   journal={Genome Announc},
   volume={6},
   year={2018},
-  doi={10.1128/genomeA.00517-18}}
-@article{10.1111_1462-2920.143882018,
+  doi={10.1128/genomeA.00517-18},
+  html={https://doi.org/10.1128/genomeA.00517-18}}
+@article{10.1111/1462-2920.143882018,
   title={Novel energy conservation strategies and behaviour of Pelotomaculum schinkii driving syntrophic propionate catabolism},
-  author={C. A. P. Hidalgo-Ahumada, M. K. Nobu, T. Narihiro, H. Tamaki, W. T. Liu, Y. Kamagata, A. J. M. Stams, H. Imachi and D. Z. Sousa},
+  author={C. A. P. Hidalgo-Ahumada and M. K. Nobu and T. Narihiro and H. Tamaki and W. T. Liu and Y. Kamagata and A. J. M. Stams and H. Imachi and D. Z. Sousa},
   journal={Environ Microbiol},
   volume={20},
   year={2018},
-  doi={10.1111/1462-2920.14388}}
-@article{10.1016_j.watres.2018.10.0262018,
+  doi={10.1111/1462-2920.14388},
+  html={https://doi.org/10.1111/1462-2920.14388}}
+@article{10.1016/j.watres.2018.10.0262018,
   title={Novel Geobacter species and diverse methanogens contribute to enhanced methane production in media-added methanogenic reactors},
-  author={R. Mei, M. K. Nobu, T. Narihiro, J. Yu, A. Sathyagal, E. Willman and W. T. Liu},
+  author={R. Mei and M. K. Nobu and T. Narihiro and J. Yu and A. Sathyagal and E. Willman and W. T. Liu},
   journal={Water Res},
   volume={147},
   year={2018},
-  doi={10.1016/j.watres.2018.10.026}}
-@article{10.1111_1758-2229.126892018,
+  doi={10.1016/j.watres.2018.10.026},
+  html={https://doi.org/10.1016/j.watres.2018.10.026}}
+@article{10.1111/1758-2229.126892018,
   title={Co-occurrence network analysis reveals thermodynamics-driven microbial interactions in methanogenic bioreactors},
-  author={T. Narihiro, M. K. Nobu, B. T. W. Bocher, R. Mei and W. T. Liu},
+  author={T. Narihiro and M. K. Nobu and B. T. W. Bocher and R. Mei and W. T. Liu},
   journal={Environ Microbiol Rep},
   volume={10},
   year={2018},
-  doi={10.1111/1758-2229.12689}}
-@article{10.1016_j.watres.2018.10.0632019,
+  doi={10.1111/1758-2229.12689},
+  html={https://doi.org/10.1111/1758-2229.12689}}
+@article{10.1016/j.watres.2018.10.0632019,
   title={Shaping microbial consortia in coupling glycerol fermentation and carboxylate chain elongation for Co-production of 1,3-propanediol and caproate: Pathways and mechanisms},
-  author={L. Leng, M. K. Nobu, T. Narihiro, P. Yang, G. Y. Amy Tan and P. H. Lee},
+  author={L. Leng and M. K. Nobu and T. Narihiro and P. Yang and G. Y. Amy Tan and P. H. Lee},
   journal={Water Res},
   volume={148},
   year={2019},
-  doi={10.1016/j.watres.2018.10.063}}
-@article{10.1099_ijsem.0.0032912019,
+  doi={10.1016/j.watres.2018.10.063},
+  html={https://doi.org/10.1016/j.watres.2018.10.063}}
+@article{10.1099/ijsem.0.0032912019,
   title={Aggregatilinea lenta gen. nov., sp. nov., a slow-growing, facultatively anaerobic bacterium isolated from subseafloor sediment, and proposal of the new order Aggregatilineales ord. nov. within the class Anaerolineae of the phylum Chloroflexi},
-  author={N. Nakahara, M. K. Nobu, Y. Takaki, M. Miyazaki, E. Tasumi, S. Sakai, M. Ogawara, N. Yoshida, H. Tamaki, Y. Yamanaka, A. Katayama, T. Yamaguchi, K. Takai and H. Imachi},
+  author={N. Nakahara and M. K. Nobu and Y. Takaki and M. Miyazaki and E. Tasumi and S. Sakai and M. Ogawara and N. Yoshida and H. Tamaki and Y. Yamanaka and A. Katayama and T. Yamaguchi and K. Takai and H. Imachi},
   journal={Int J Syst Evol Microbiol},
   volume={69},
   year={2019},
-  doi={10.1099/ijsem.0.003291}}
-@article{10.1264_jsme2.ME181082019,
+  doi={10.1099/ijsem.0.003291},
+  html={https://doi.org/10.1099/ijsem.0.003291}}
+@article{10.1264/jsme2.ME181082019,
   title={Effects of the Wastewater Flow Rate on Interactions between the Genus Nitrosomonas and Diverse Populations in an Activated Sludge Microbiome},
-  author={T. Narihiro, M. K. Nobu, T. Hori, T. Aoyagi, Y. Sato, T. Inaba, H. Aizawa, H. Tamaki and H. Habe},
+  author={T. Narihiro and M. K. Nobu and T. Hori and T. Aoyagi and Y. Sato and T. Inaba and H. Aizawa and H. Tamaki and H. Habe},
   journal={Microbes Environ},
   volume={34},
   year={2019},
-  doi={10.1264/jsme2.ME18108}}
-@article{10.1038_s41598-019-46388-12019,
+  doi={10.1264/jsme2.ME18108},
+  html={https://doi.org/10.1264/jsme2.ME18108}}
+@article{10.1038/s41598-019-46388-12019,
   title={Community analysis of gut microbiota in hornets, the largest eusocial wasps, Vespa mandarinia and V. simillima},
-  author={S. Suenami, M. Konishi Nobu and R. Miyazaki},
+  author={S. Suenami and M. Konishi Nobu and R. Miyazaki},
   journal={Sci Rep},
   volume={9},
   year={2019},
-  doi={10.1038/s41598-019-46388-1}}
-@article{10.1038_s41598-019-53849-02019,
+  doi={10.1038/s41598-019-46388-1},
+  html={https://doi.org/10.1038/s41598-019-46388-1}}
+@article{10.1038/s41598-019-53849-02019,
   title={Using DNA-based stable isotope probing to reveal novel propionate- and acetate-oxidizing bacteria in propionate-fed mesophilic anaerobic chemostats},
-  author={H. Z. Wang, X. M. Lv, Y. Yi, D. Zheng, M. Gou, Y. Nie, B. Hu, M. K. Nobu, T. Narihiro and Y. Q. Tang},
+  author={H. Z. Wang and X. M. Lv and Y. Yi and D. Zheng and M. Gou and Y. Nie and B. Hu and M. K. Nobu and T. Narihiro and Y. Q. Tang},
   journal={Sci Rep},
   volume={9},
   year={2019},
-  doi={10.1038/s41598-019-53849-0}}
-@article{10.1007_s12010-019-03005-12019,
+  doi={10.1038/s41598-019-53849-0},
+  html={https://doi.org/10.1038/s41598-019-53849-0}}
+@article{10.1007/s12010-019-03005-12019,
   title={Response of Propionate-Degrading Methanogenic Microbial Communities to Inhibitory Conditions},
-  author={H. Z. Wang, Y. C. Yan, M. Gou, Y. Yi, Z. Y. Xia, M. K. Nobu, T. Narihiro and Y. Q. Tang},
+  author={H. Z. Wang and Y. C. Yan and M. Gou and Y. Yi and Z. Y. Xia and M. K. Nobu and T. Narihiro and Y. Q. Tang},
   journal={Appl Biochem Biotechnol},
   volume={189},
   year={2019},
-  doi={10.1007/s12010-019-03005-1}}
-@article{10.1128_MRA.00709-192019,
+  doi={10.1007/s12010-019-03005-1},
+  html={https://doi.org/10.1007/s12010-019-03005-1}}
+@article{10.1128/MRA.00709-192019,
   title={Draft Genome Sequence of Thermodesulfovibrio sp. Strain Kuro-1, a Thermophilic, Lactate-Degrading Anaerobe Isolated from a Thermophilic Anaerobic Digestion Reactor},
-  author={T. Yamada, J. Harada, M. Kurobe, S. Giri, M. Konishi Nobu, T. Narihiro, H. Tsuji and H. Daimon},
+  author={T. Yamada and J. Harada and M. Kurobe and S. Giri and M. Konishi Nobu and T. Narihiro and H. Tsuji and H. Daimon},
   journal={Microbiol Resour Announc},
   volume={8},
   year={2019},
-  doi={10.1128/MRA.00709-19}}
-@article{10.1007_s00253-019-10078-92019,
+  doi={10.1128/MRA.00709-19},
+  html={https://doi.org/10.1128/MRA.00709-19}}
+@article{10.1007/s00253-019-10078-92019,
   title={Identification of novel potential acetate-oxidizing bacteria in thermophilic methanogenic chemostats by DNA stable isotope probing},
-  author={D. Zheng, H. Z. Wang, M. Gou, M. K. Nobu, T. Narihiro, B. Hu, Y. Nie and Y. Q. Tang},
+  author={D. Zheng and H. Z. Wang and M. Gou and M. K. Nobu and T. Narihiro and B. Hu and Y. Nie and Y. Q. Tang},
   journal={Appl Microbiol Biotechnol},
   volume={103},
   year={2019},
-  doi={10.1007/s00253-019-10078-9}}
-@article{10.1128_mSystems.00159-192019,
+  doi={10.1007/s00253-019-10078-9},
+  html={https://doi.org/10.1007/s00253-019-10078-9}}
+@article{10.1128/mSystems.00159-192019,
   title={Elucidating Syntrophic Butyrate-Degrading Populations in Anaerobic Digesters Using Stable-Isotope-Informed Genome-Resolved Metagenomics},
-  author={R. M. Ziels, M. K. Nobu and D. Z. Sousa},
+  author={R. M. Ziels and M. K. Nobu and D. Z. Sousa},
   journal={mSystems},
   volume={4},
   year={2019},
-  doi={10.1128/mSystems.00159-19}}
-@article{10.1021_acs.est.0c018402020,
+  doi={10.1128/mSystems.00159-19},
+  html={https://doi.org/10.1128/mSystems.00159-19}}
+@article{10.1021/acs.est.0c018402020,
   title={Novel Syntrophic Isovalerate-Degrading Bacteria and Their Energetic Cooperation with Methanogens in Methanogenic Chemostats},
-  author={Y. T. Chen, Y. Zeng, J. Li, X. Y. Zhao, Y. Yi, M. Gou, Y. Kamagata, T. Narihiro, M. K. Nobu and Y. Q. Tang},
+  author={Y. T. Chen and Y. Zeng and J. Li and X. Y. Zhao and Y. Yi and M. Gou and Y. Kamagata and T. Narihiro and M. K. Nobu and Y. Q. Tang},
   journal={Environ Sci Technol},
   volume={54},
   year={2020},
-  doi={10.1021/acs.est.0c01840}}
-@article{10.1007_s00248-020-01485-x2020,
+  doi={10.1021/acs.est.0c01840},
+  html={https://doi.org/10.1021/acs.est.0c01840}}
+@article{10.1007/s00248-020-01485-x2020,
   title={Different Interspecies Electron Transfer Patterns during Mesophilic and Thermophilic Syntrophic Propionate Degradation in Chemostats},
-  author={Y. T. Chen, Y. Zeng, H. Z. Wang, D. Zheng, Y. Kamagata, T. Narihiro, M. K. Nobu and Y. Q. Tang},
+  author={Y. T. Chen and Y. Zeng and H. Z. Wang and D. Zheng and Y. Kamagata and T. Narihiro and M. K. Nobu and Y. Q. Tang},
   journal={Microb Ecol},
   volume={80},
   year={2020},
-  doi={10.1007/s00248-020-01485-x}}
-@article{10.1007_s11356-019-06705-72020,
+  doi={10.1007/s00248-020-01485-x},
+  html={https://doi.org/10.1007/s00248-020-01485-x}}
+@article{10.1007/s11356-019-06705-72020,
   title={Different inhibitory mechanisms of chlortetracycline and enrofloxacin on mesophilic anaerobic degradation of propionate},
-  author={M. Gou, H. Wang, J. Li, Z. Sun, Y. Nie, M. K. Nobu and Y. Tang},
+  author={M. Gou and H. Wang and J. Li and Z. Sun and Y. Nie and M. K. Nobu and Y. Tang},
   journal={Environ Sci Pollut Res Int},
   volume={27},
   year={2020},
-  doi={10.1007/s11356-019-06705-7}}
-@article{10.1038_s41586-019-1916-62020,
+  doi={10.1007/s11356-019-06705-7},
+  html={https://doi.org/10.1007/s11356-019-06705-7}}
+@article{10.1038/s41586-019-1916-62020,
   title={Isolation of an archaeon at the prokaryote-eukaryote interface},
-  author={H. Imachi, M. K. Nobu, N. Nakahara, Y. Morono, M. Ogawara, Y. Takaki, Y. Takano, K. Uematsu, T. Ikuta, M. Ito, Y. Matsui, M. Miyazaki, K. Murata, Y. Saito, S. Sakai, C. Song, E. Tasumi, Y. Yamanaka, T. Yamaguchi, Y. Kamagata, H. Tamaki and K. Takai},
+  author={H. Imachi and M. K. Nobu and N. Nakahara and Y. Morono and M. Ogawara and Y. Takaki and Y. Takano and K. Uematsu and T. Ikuta and M. Ito and Y. Matsui and M. Miyazaki and K. Murata and Y. Saito and S. Sakai and C. Song and E. Tasumi and Y. Yamanaka and T. Yamaguchi and Y. Kamagata and H. Tamaki and K. Takai},
   journal={Nature},
   volume={577},
   year={2020},
-  doi={10.1038/s41586-019-1916-6}}
-@article{10.1038_s41467-020-20149-52020,
+  doi={10.1038/s41586-019-1916-6},
+  html={https://doi.org/10.1038/s41586-019-1916-6}}
+@article{10.1038/s41467-020-20149-52020,
   title={Isolation of a member of the candidate phylum 'Atribacteria' reveals a unique cell membrane structure},
-  author={T. Katayama, M. K. Nobu, H. Kusada, X. Y. Meng, N. Hosogi, K. Uematsu, H. Yoshioka, Y. Kamagata and H. Tamaki},
+  author={T. Katayama and M. K. Nobu and H. Kusada and X. Y. Meng and N. Hosogi and K. Uematsu and H. Yoshioka and Y. Kamagata and H. Tamaki},
   journal={Nat Commun},
   volume={11},
   year={2020},
-  doi={10.1038/s41467-020-20149-5}}
-@article{10.1128_mBio.00408-202020,
+  doi={10.1038/s41467-020-20149-5},
+  html={https://doi.org/10.1038/s41467-020-20149-5}}
+@article{10.1128/mBio.00408-202020,
   title={Deep Sequencing Uncovers Caste-Associated Diversity of Symbionts in the Social Ant Camponotus japonicus},
-  author={A. Koto, M. K. Nobu and R. Miyazaki},
+  author={A. Koto and M. K. Nobu and R. Miyazaki},
   journal={mBio},
   volume={11},
   year={2020},
-  doi={10.1128/mBio.00408-20}}
-@article{10.3390_agronomy100709292020,
+  doi={10.1128/mBio.00408-20},
+  html={https://doi.org/10.1128/mBio.00408-20}}
+@article{10.3390/agronomy100709292020,
   title={Influence of Green Tuff Fertilizer Application on Soil Microorganisms, Plant Growth, and Soil Chemical Parameters in Green Onion (Allium fistulosum L.) Cultivation},
-  author={K. Kuroda, H. Kurashita, T. Arata, A. Miyata, M. Kawazoe, M. K. Nobu, T. Narihiro, T. Ohike, M. Hatamoto, S. Maki and T. Yamaguchi},
+  author={K. Kuroda and H. Kurashita and T. Arata and A. Miyata and M. Kawazoe and M. K. Nobu and T. Narihiro and T. Ohike and M. Hatamoto and S. Maki and T. Yamaguchi},
   journal={Agronomy},
   volume={10},
   year={2020},
-  doi={10.3390/agronomy10070929}}
-@article{10.1007_s12010-020-03234-92020,
+  doi={10.3390/agronomy10070929},
+  html={https://doi.org/10.3390/agronomy10070929}}
+@article{10.1007/s12010-020-03234-92020,
   title={Response of Isovalerate-Degrading Methanogenic Microbial Community to Inhibitors},
-  author={J. Li, H. Z. Wang, Y. Yi, M. Gou, M. K. Nobu, Y. T. Chen and Y. Q. Tang},
+  author={J. Li and H. Z. Wang and Y. Yi and M. Gou and M. K. Nobu and Y. T. Chen and Y. Q. Tang},
   journal={Appl Biochem Biotechnol},
   volume={191},
   year={2020},
-  doi={10.1007/s12010-020-03234-9}}
-@article{10.1016_j.jhazmat.2019.1215152020,
+  doi={10.1007/s12010-020-03234-9},
+  html={https://doi.org/10.1007/s12010-020-03234-9}}
+@article{10.1016/j.jhazmat.2019.1215152020,
   title={Bacterial compositions in inhalable particulate matters from indoor and outdoor wastewater treatment processes},
-  author={M. Liu, M. K. Nobu, J. Ren, X. Jin, G. Hong and H. Yao},
+  author={M. Liu and M. K. Nobu and J. Ren and X. Jin and G. Hong and H. Yao},
   journal={J Hazard Mater},
   volume={385},
   year={2020},
-  doi={10.1016/j.jhazmat.2019.121515}}
-@article{10.1111_1758-2229.128212020,
+  doi={10.1016/j.jhazmat.2019.121515},
+  html={https://doi.org/10.1016/j.jhazmat.2019.121515}}
+@article{10.1111/1758-2229.128212020,
   title={Identifying anaerobic amino acids degraders through the comparison of short-term and long-term enrichments},
-  author={R. Mei, M. K. Nobu and W. T. Liu},
+  author={R. Mei and M. K. Nobu and W. T. Liu},
   journal={Environ Microbiol Rep},
   volume={12},
   year={2020},
-  doi={10.1111/1758-2229.12821}}
-@article{10.3389_fmicb.2020.5930062020,
+  doi={10.1111/1758-2229.12821},
+  html={https://doi.org/10.1111/1758-2229.12821}}
+@article{10.3389/fmicb.2020.5930062020,
   title={Metagenomic and Metatranscriptomic Analyses Revealed Uncultured Bacteroidales Populations as the Dominant Proteolytic Amino Acid Degraders in Anaerobic Digesters},
-  author={R. Mei, M. K. Nobu, T. Narihiro and W. T. Liu},
+  author={R. Mei and M. K. Nobu and T. Narihiro and W. T. Liu},
   journal={Front Microbiol},
   volume={11},
   year={2020},
-  doi={10.3389/fmicb.2020.593006}}
-@article{10.1186_s40168-020-00885-y2020,
+  doi={10.3389/fmicb.2020.593006},
+  html={https://doi.org/10.3389/fmicb.2020.593006}}
+@article{10.1186/s40168-020-00885-y2020,
   title={Catabolism and interactions of uncultured organisms shaped by eco-thermodynamics in methanogenic bioprocesses},
-  author={M. K. Nobu, T. Narihiro, R. Mei, Y. Kamagata, P. K. H. Lee, P. H. Lee, M. J. McInerney and W. T. Liu},
+  author={M. K. Nobu and T. Narihiro and R. Mei and Y. Kamagata and P. K. H. Lee and P. H. Lee and M. J. McInerney and W. T. Liu},
   journal={Microbiome},
   volume={8},
   year={2020},
-  doi={10.1186/s40168-020-00885-y}}
-@article{10.1038_s41559-020-1125-62020,
+  doi={10.1186/s40168-020-00885-y},
+  html={https://doi.org/10.1186/s40168-020-00885-y}}
+@article{10.1038/s41559-020-1125-62020,
   title={A hydrogen-dependent geochemical analogue of primordial carbon and energy metabolism},
-  author={M. Preiner, K. Igarashi, K. B. Muchowska, M. Yu, S. J. Varma, K. Kleinermanns, M. K. Nobu, Y. Kamagata, H. Tuysuz, J. Moran and W. F. Martin},
+  author={M. Preiner and K. Igarashi and K. B. Muchowska and M. Yu and S. J. Varma and K. Kleinermanns and M. K. Nobu and Y. Kamagata and H. Tuysuz and J. Moran and W. F. Martin},
   journal={Nat Ecol Evol},
   volume={4},
   year={2020},
-  doi={10.1038/s41559-020-1125-6}}
-@article{10.1016_j.jbiosc.2019.10.0062020,
+  doi={10.1038/s41559-020-1125-6},
+  html={https://doi.org/10.1038/s41559-020-1125-6}}
+@article{10.1016/j.jbiosc.2019.10.0062020,
   title={Response to inhibitory conditions of acetate-degrading methanogenic microbial community},
-  author={H. Z. Wang, J. Li, Y. Yi, M. K. Nobu, T. Narihiro and Y. Q. Tang},
+  author={H. Z. Wang and J. Li and Y. Yi and M. K. Nobu and T. Narihiro and Y. Q. Tang},
   journal={J Biosci Bioeng},
   volume={129},
   year={2020},
-  doi={10.1016/j.jbiosc.2019.10.006}}
-@article{10.1038_s41396-021-01025-62021,
+  doi={10.1016/j.jbiosc.2019.10.006},
+  html={https://doi.org/10.1016/j.jbiosc.2019.10.006}}
+@article{10.1038/s41396-021-01025-62021,
   title={Methanogenic archaea use a bacteria-like methyltransferase system to demethoxylate aromatic compounds},
-  author={J. M. Kurth, M. K. Nobu, H. Tamaki, N. de Jonge, S. Berger, M. S. M. Jetten, K. Yamamoto, D. Mayumi, S. Sakata, L. Bai, L. Cheng, J. L. Nielsen, Y. Kamagata, T. Wagner and C. U. Welte},
+  author={J. M. Kurth and M. K. Nobu and H. Tamaki and N. de Jonge and S. Berger and M. S. M. Jetten and K. Yamamoto and D. Mayumi and S. Sakata and L. Bai and L. Cheng and J. L. Nielsen and Y. Kamagata and T. Wagner and C. U. Welte},
   journal={ISME J},
   volume={15},
   year={2021},
-  doi={10.1038/s41396-021-01025-6}}
-@article{10.1016_j.syapm.2020.1261542021,
+  doi={10.1038/s41396-021-01025-6},
+  html={https://doi.org/10.1038/s41396-021-01025-6}}
+@article{10.1016/j.syapm.2020.1261542021,
   title={Koleobacter methoxysyntrophicus gen. nov., sp. nov., a novel anaerobic bacterium isolated from deep subsurface oil field and proposal of Koleobacteraceae fam. nov. and Koleobacterales ord. nov. within the class Clostridia of the phylum Firmicutes},
-  author={S. Sakamoto, M. K. Nobu, D. Mayumi, S. Tamazawa, H. Kusada, H. Yonebayashi, H. Iwama, M. Ikarashi, T. Wakayama, H. Maeda, S. Sakata, T. Tamura, N. Nomura, Y. Kamagata and H. Tamaki},
+  author={S. Sakamoto and M. K. Nobu and D. Mayumi and S. Tamazawa and H. Kusada and H. Yonebayashi and H. Iwama and M. Ikarashi and T. Wakayama and H. Maeda and S. Sakata and T. Tamura and N. Nomura and Y. Kamagata and H. Tamaki},
   journal={Syst Appl Microbiol},
   volume={44},
   year={2021},
-  doi={10.1016/j.syapm.2020.126154}}
-@article{10.1038_s41596-022-00735-12022,
+  doi={10.1016/j.syapm.2020.126154},
+  html={https://doi.org/10.1016/j.syapm.2020.126154}}
+@article{10.1038/s41596-022-00735-12022,
   title={Cultivation of previously uncultured microorganisms with a continuous-flow down-flow hanging sponge (DHS) bioreactor, using a syntrophic archaeon culture obtained from deep marine sediment as a case study},
-  author={H. Imachi, M. K. Nobu, M. Miyazaki, E. Tasumi, Y. Saito, S. Sakai, M. Ogawara, A. Ohashi and K. Takai},
+  author={H. Imachi and M. K. Nobu and M. Miyazaki and E. Tasumi and Y. Saito and S. Sakai and M. Ogawara and A. Ohashi and K. Takai},
   journal={Nat Protoc},
   volume={17},
   year={2022},
-  doi={10.1038/s41596-022-00735-1}}
-@article{10.1016_j.cej.2022.1379162022,
+  doi={10.1038/s41596-022-00735-1},
+  html={https://doi.org/10.1038/s41596-022-00735-1}}
+@article{10.1016/j.cej.2022.1379162022,
   title={Elucidation of the biodegradation pathways of bis(2-hydroxyethyl) terephthalate and dimethyl terephthalate under anaerobic conditions revealed by enrichment culture and microbiome analysis},
-  author={K. Kuroda, T. Narihiro, Y. Nakaya, T. Q. P. Noguchi, R. Maeda, M. K. Nobu, Y. Ohnishi, Y. Kumaki, T. Aizawa and H. Satoh},
+  author={K. Kuroda and T. Narihiro and Y. Nakaya and T. Q. P. Noguchi and R. Maeda and M. K. Nobu and Y. Ohnishi and Y. Kumaki and T. Aizawa and H. Satoh},
   journal={Chemical Engineering Journal},
   volume={450},
   year={2022},
-  doi={10.1016/j.cej.2022.137916}}
-@article{10.1016_j.watres.2022.1185812022,
+  doi={10.1016/j.cej.2022.137916},
+  html={https://doi.org/10.1016/j.cej.2022.137916}}
+@article{10.1016/j.watres.2022.1185812022,
   title={High-rate cotreatment of purified terephthalate and dimethyl terephthalate manufacturing wastewater by a mesophilic upflow anaerobic sludge blanket reactor and the microbial ecology relevant to aromatic compound degradation},
-  author={K. Kuroda, T. Narihiro, F. Shinshima, M. Yoshida, H. Yamaguchi, H. Kurashita, N. Nakahara, M. K. Nobu, T. Q. P. Noguchi, M. Yamauchi and M. Yamada},
+  author={K. Kuroda and T. Narihiro and F. Shinshima and M. Yoshida and H. Yamaguchi and H. Kurashita and N. Nakahara and M. K. Nobu and T. Q. P. Noguchi and M. Yamauchi and M. Yamada},
   journal={Water Res},
   volume={219},
   year={2022},
-  doi={10.1016/j.watres.2022.118581}}
-@article{10.1128_mbio.01711-222022,
+  doi={10.1016/j.watres.2022.118581},
+  html={https://doi.org/10.1016/j.watres.2022.118581}}
+@article{10.1128/mbio.01711-222022,
   title={Symbiosis between Candidatus Patescibacteria and Archaea Discovered in Wastewater-Treating Bioreactors},
-  author={K. Kuroda, K. Yamamoto, R. Nakai, Y. Hirakata, K. Kubota, M. K. Nobu and T. Narihiro},
+  author={K. Kuroda and K. Yamamoto and R. Nakai and Y. Hirakata and K. Kubota and M. K. Nobu and T. Narihiro},
   journal={mBio},
   volume={13},
   year={2022},
-  doi={10.1128/mbio.01711-22}}
-@article{10.1038_s41396-023-01538-22023,
+  doi={10.1128/mbio.01711-22},
+  html={https://doi.org/10.1128/mbio.01711-22}}
+@article{10.1038/s41396-023-01538-22023,
   title={Identification and cultivation of anaerobic bacterial scavengers of dead cells},
-  author={Y. Hirakata, R. Mei, K. Morinaga, T. Katayama, H. Tamaki, X. Y. Meng, T. Watari, T. Yamaguchi, M. Hatamoto and M. K. Nobu},
+  author={Y. Hirakata and R. Mei and K. Morinaga and T. Katayama and H. Tamaki and X. Y. Meng and T. Watari and T. Yamaguchi and M. Hatamoto and M. K. Nobu},
   journal={ISME J},
   volume={17},
   year={2023},
-  doi={10.1038/s41396-023-01538-2}}
-@article{10.1093_pnasnexus/pgad0232023,
+  doi={10.1038/s41396-023-01538-2},
+  html={https://doi.org/10.1038/s41396-023-01538-2}}
+@article{10.1093/pnasnexus/pgad0232023,
   title={The origin and evolution of methanogenesis and Archaea are intertwined},
-  author={R. Mei, M. Kaneko, H. Imachi and M. K. Nobu},
+  author={R. Mei and M. Kaneko and H. Imachi and M. K. Nobu},
   journal={PNAS Nexus},
   volume={2},
   year={2023},
-  doi={10.1093/pnasnexus/pgad023}}
-@article{10.1038_s41396-022-01197-92023,
+  doi={10.1093/pnasnexus/pgad023},
+  html={https://doi.org/10.1093/pnasnexus/pgad023}}
+@article{10.1038/s41396-022-01197-92023,
   title={Unique H(2)-utilizing lithotrophy in serpentinite-hosted systems},
-  author={M. K. Nobu, R. Nakai, S. Tamazawa, H. Mori, A. Toyoda, A. Ijiri, S. Suzuki, K. Kurokawa, Y. Kamagata and H. Tamaki},
+  author={M. K. Nobu and R. Nakai and S. Tamazawa and H. Mori and A. Toyoda and A. Ijiri and S. Suzuki and K. Kurokawa and Y. Kamagata and H. Tamaki},
   journal={ISME J},
   volume={17},
   year={2023},
-  doi={10.1038/s41396-022-01197-9}}
-@article{10.1038_s41564-024-01717-72024,
+  doi={10.1038/s41396-022-01197-9},
+  html={https://doi.org/10.1038/s41396-022-01197-9}}
+@article{10.1038/s41564-024-01717-72024,
   title={A Marine Group A isolate relies on other growing bacteria for cell wall formation},
-  author={T. Katayama, M. K. Nobu, H. Imachi, N. Hosogi, X. Y. Meng, K. Morinaga, H. Yoshioka, H. A. Takahashi, Y. Kamagata and H. Tamaki},
+  author={T. Katayama and M. K. Nobu and H. Imachi and N. Hosogi and X. Y. Meng and K. Morinaga and H. Yoshioka and H. A. Takahashi and Y. Kamagata and H. Tamaki},
   journal={Nat Microbiol},
     year={2024},
-  doi={10.1038/s41564-024-01717-7}}
-@article{10.1128_mbio.03102-232024,
+  doi={10.1038/s41564-024-01717-7},
+  html={https://doi.org/10.1038/s41564-024-01717-7}}
+@article{10.1128/mbio.03102-232024,
   title={Microscopic and metatranscriptomic analyses revealed unique cross-domain parasitism between phylum Candidatus Patescibacteria/candidate phyla radiation and methanogenic archaea in anaerobic ecosystems},
-  author={K. Kuroda, M. Nakajima, R. Nakai, Y. Hirakata, S. Kagemasa, K. Kubota, T. Q. P. Noguchi, K. Yamamoto, H. Satoh, M. K. Nobu and T. Narihiro},
+  author={K. Kuroda and M. Nakajima and R. Nakai and Y. Hirakata and S. Kagemasa and K. Kubota and T. Q. P. Noguchi and K. Yamamoto and H. Satoh and M. K. Nobu and T. Narihiro},
   journal={mBio},
   volume={15},
   year={2024},
-  doi={10.1128/mbio.03102-23}}
-@article{10.1073_pnas.23221201212024,
+  doi={10.1128/mbio.03102-23},
+  html={https://doi.org/10.1128/mbio.03102-23}}
+@article{10.1073/pnas.23221201212024,
   title={Illuminating the coevolution of photosynthesis and Bacteria},
-  author={A. Nishihara, Y. Tsukatani, C. Azai and M. K. Nobu},
+  author={A. Nishihara and Y. Tsukatani and C. Azai and M. K. Nobu},
   journal={Proc Natl Acad Sci U S A},
   volume={121},
   year={2024},
-  doi={10.1073/pnas.2322120121}}
+  doi={10.1073/pnas.2322120121},
+  html={https://doi.org/10.1073/pnas.2322120121}}
 
 @string{aps = {American Physical Society,}}
 
